# sarp-connectivity

./: .gitignore  Developing.md  LICENSE  Pipfile  README  README.md  environment.yml  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml
analysis/: README.md  aggregate_spp_occurrences.py  classify.py  constants.py  extract_bbox.py  preprocess_dams.py  preprocess_small_barriers.py  pygeos_compat.py  summarize_by_unit.py  util.py
analysis/compare/: compare_versions.py
analysis/export/: README.md  calc_network_stats_by_state.py  estimate_dams.py  export_altered_rivers.py  export_barriers.py  export_downstream_linear_networks.py  export_networks.py  export_networks_public.py  export_networks_usfws.py  export_processed_flowlines.py  export_raw_flowlines.py  export_removed_barrier_networks.py  export_road_crossings_with_networks.py  export_secas_ssa_stats.py  export_single_network.py  export_unclaimed_drains.py  export_waterbodies.py  extract_dams_for_qaqc.py  extract_for_frontiers_paper.py  extract_huc12_stats.py  extract_networks.py  summarize.py  summarize_by_catchment.py  summarize_dams.py  summarize_small_barriers.py  summary_stats.py
analysis/lib/: arrow.py  compression.py  flowlines.py  graph.py  io.py  joins.py  network.py  pygeos_util.py  util.py  waterbodies.py
analysis/network/: README.md  barriers.py  calc_removed_barrier_stats.py  cut_flowlines.py  export_networks.py  flowlines.py  merge_networks.py  network_analysis.py  networks.py  run_network_analysis.py  stats.py
analysis/post/: README.md  aggregate_networks.py  create_barrier_tiles.py  create_network_tiles.py  create_region_maps.py  create_static_maps.py  create_summary_tiles.py  extract_dam_networks.py  extract_small_barrier_networks.py  extract_summary_stats.py  extract_waterfall_networks.py  generate_barrier_tiles.sh  generate_flowline_tiles.sh  generate_network_tiles.sh  generate_summary_tiles.sh  generate_tiles.sh  postprocess_waterfalls.py  summary_stats.py
analysis/prep/: README.md  prep_boundaries.py  prep_dams.py  prep_road_crossings.py  prep_small_barriers.py  prep_waterfalls.py  snap.py
analysis/rank/: README.md  classify.py  rank_barriers.py  rank_combined_dams_small_barriers.py  rank_dams.py  rank_small_barriers.py
api/: __init__.py  app.py  calculate_tiers.py  constants.py  data.py  dependencies.py  domains.py  logger.py  preprocess_data.py  response.py  server.py  settings.py  worker.py
api/dev/: downloads.py
api/internal/: __init__.py  details.py  download.py  query.py  rank.py  search.py
api/lib/: compression.py  domains.py  download.py  extract.py  progress.py  tiers.py
api/metadata/: __init__.py  description.txt  readme_template.txt  terms_of_use.txt  terms_template.txt
api/public/: __init__.py  metadata.py  query.py
api/templates/: barriers_readme.txt  dams_readme.txt  index.html  terms.txt
data/: README.md  aggregate_spp_occurrences.py  calculate_NHD_sinuosity.py  calculate_tiers.py  collate.py  domains.py  extract_bbox.py  extract_centroids.py  extract_species_data.py  network_README.md  network_analysis.py  prep_boundaries.py  preprocess_dams.py  preprocess_data.py  preprocess_road_crossings.py  preprocess_small_barriers.py  remove_duplicates.py  summarize_by_unit.py
data/archive/: Data_processing_notes.md  README.md
data/network/: calculate_cut_networks.py  create_networks.py  cut_lines.py  extract_nhd.py  extract_nhd_by_HUC4.py  line_utils.py  network_analysis.py  network_stats.py  network_utils.py  prepare_flowlines.py  snap_points.py
data/summary/: County.csv  ECO3.csv  ECO4.csv  Ecoregion1.csv  Ecoregion2.csv  Ecoregion3.csv  Ecoregion4.csv  HUC10.csv  HUC12.csv  HUC2.csv  HUC4.csv  HUC6.csv  HUC8.csv  State.csv  species_huc12_summary.csv  state.csv  states.csv
deploy/: DataRelease.md  README.md  nginx.conf  nginx.conf.staging
tests/: conftest.py
ui/: .babelrc  .eslintrc  .prettierrc  .stylelintrc  components.json  eslint.config.js  gatsby-browser.js  gatsby-config.js  gatsby-node.js  gatsby-ssr.js  media_sources.txt  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
ui/src/: App.jsx  (+12 more)
(+965 files in other folders)
