[tool.poetry]
name = "sarp-connectivity"
# version is managed in setup.py
version = "0.0.0"
description = "Aquatic Barrier Inventory Visualization & Prioritization Tool"
authors = ["Brendan Ward <bcward@astutespruce.com>"]
license = "MIT"
packages = [{ include = "analysis" }, { include = "api" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyarrow = "^17.0.0"
python-dotenv = "^1.0.1"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
gunicorn = "^22.0.0"
sentry-sdk = "^2.12.0"
rapidfuzz = "^3.9.5"
numpy = "^2.0.1"
fastapi-cli = "^0.0.5"
duckdb = "^1.0.0"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
tqdm = "^4.66.5"
numba = "^0.60.0"
pyogrio = "^0.9.0"
geopandas = "^1.0.1"
pandas = "^2.2.2"
httpx = { extras = ["http2"], version = "^0.27.0" }
scipy = "^1.14.0"
shapely = "^2.0.5"
openpyxl = "^3.1.5"
tabulate = "^0.9.0"
ruff = "^0.5.6"
python-calamine = "^0.2.3"
watchfiles = "^0.22.0"

[tool.poetry.extras]
deploy = ["gunicorn"]

# wheel is built locally for Arm64
# must be uncommented to install
# pymgl = { path = "../pymgl/dist/pymgl-0.4.0-cp310-cp310-macosx_12_0_arm64.whl" }


[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
