[project]
name = "sarp-connectivity"
# version must be kept in sync with ui/package.json
version = "3.15.0"
description = "National Aquatic Barrier Inventory & Prioritization Tool"
readme = "README.md"
authors = [{ name = "Brendan C. Ward", email = "bcward@astutespruce.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.12"
dependencies = [
    "arq",
    "duckdb",
    "fastapi",
    "gunicorn",
    "numpy",
    "pyarrow",
    "python-dotenv",
    "rapidfuzz",
    "redis[hiredis]<6",
    "sentry-sdk",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "geopandas",
    "httpx[http2]",
    "numba>=0.60",
    "openpyxl",
    "pandas",
    "pymgl",
    "pyogrio",
    "pytest",
    "python-calamine",
    "ruff",
    "shapely",
    "scipy",
    "tabulate",
    "tqdm",
    "watchfiles",
]

[project.urls]
Homepage = "https://aquaticbarriers.org"
Repository = "https://github.com/astute-spruce/sarp-connectivity"

[tool.setuptools.packages.find]
include = ["analysis", "api"]

[tool.ruff]
line-length = 120
